--- a/EDA on Titanic Dataset.ipynb
+++ b/EDA on Titanic Dataset.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "#to load dataset of titanic\n",
-    "df=pd.read_csv('titanic.csv')"
+    "df=pd.read_csv('titanic1.csv')"
    ]
   },
   {
@@ -586,7 +586,7 @@
    "source": [
     "#we can see that each columns datatypes was correct as its contents \n",
     "#also we have null values as nan present in 3 columns which are Age , Cabin , Embarked\n",
-    "#let us now handle the null values now \n",
+    "#let us now handle the null values \n",
     "#we will fill the null values of Age and Embarked columns as it has null value % less then 50%\n",
     "#we would be dropping the Cabin column as it has 77% null values "
    ]
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "21691413",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "28b324a4",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "b5a315d9",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "7646510e",
    "metadata": {},
    "outputs": [],
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "f0e7cb06",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1443,7 @@
        "4    1         2         0       3  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "34c6e061",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1476,7 @@
        "        -0.47367361, -0.49237783]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
